// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputWrapper.vue should hide the label when hideLabel is true 1`] = `
<div
  class="feather-input-wrapper-container hide-label error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render a focused border & raised label 1`] = `
<div
  class="feather-input-wrapper-container focused error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render a normal wrapper 1`] = `
<div
  class="feather-input-wrapper-container error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render a raised label 1`] = `
<div
  class="feather-input-wrapper-container raised error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 12px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render clear and error icons 1`] = `
<div
  class="feather-input-wrapper-container error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <a
        class="action-icon hide-when-disabled"
        data-ref-id="feather-form-element-clear"
        href="#"
        title="Clear Text"
      >
        <svg
          aria-hidden="true"
          class="feather-icon"
          data-v-0aa06a12=""
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19,17.55,13.43,12,19,6.4A1,1,0,1,0,17.58,5L12,10.58,6.42,5A1,1,0,0,0,5,6.42L10.6,12,5,17.6A1,1,0,0,0,5,19a1,1,0,0,0,.71.29,1,1,0,0,0,.71-.3L12,13.41,17.6,19a1,1,0,0,0,.71.29A1,1,0,0,0,19,19,1,1,0,0,0,19,17.55Z"
          />
        </svg>
      </a>
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render clear icon when clear and show clear is set 1`] = `
<div
  class="feather-input-wrapper-container error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <a
        class="action-icon hide-when-disabled"
        data-ref-id="feather-form-element-clear"
        href="#"
        title="Clear Text"
      >
        <svg
          aria-hidden="true"
          class="feather-icon"
          data-v-0aa06a12=""
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19,17.55,13.43,12,19,6.4A1,1,0,1,0,17.58,5L12,10.58,6.42,5A1,1,0,0,0,5,6.42L10.6,12,5,17.6A1,1,0,0,0,5,19a1,1,0,0,0,.71.29,1,1,0,0,0,.71-.3L12,13.41,17.6,19a1,1,0,0,0,.71.29A1,1,0,0,0,19,19,1,1,0,0,0,19,17.55Z"
          />
        </svg>
      </a>
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render in an error state 1`] = `
<div
  class="feather-input-wrapper-container error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should render in disabled state 1`] = `
<div
  class="feather-input-wrapper-container error disabled"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;

exports[`InputWrapper.vue should take into account any prefix elements when not raised 1`] = `
<div
  class="feather-input-wrapper-container error"
>
  <fieldset
    aria-hidden="true"
    class="feather-input-border"
  >
    <legend>
      test
    </legend>
  </fieldset>
  <label
    class="feather-input-label"
    data-ref-id="feather-form-element-label"
    for="test"
    style="left: 16px;"
  >
    test
  </label>
  <div
    class="feather-input-wrapper"
  >
    <div
      class="prefix"
    >
      
      
    </div>
    
    <div
      class="prefix"
      style="width: 10px; display: inline-block;"
    />
    <span>
      CONTENT
    </span>
    
    <div
      class="post"
    >
      <!--v-if-->
      <svg
        aria-hidden="true"
        class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
        data-ref-id="error-icon"
        data-v-0aa06a12=""
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
        />
        <rect
          height="7"
          rx="1"
          width="2"
          x="11"
          y="7"
        />
        <rect
          height="2"
          rx="0.65"
          width="2"
          x="11"
          y="15"
        />
      </svg>
      
      
    </div>
  </div>
</div>
`;
